# cwadventures_bot

./: .gitignore  Dockerfile  Makefile  README.md  amvera.yml  app polling.py  app.py  app_.py  app__.py  db.sqlite3  middlewares.py  pyproject.toml  requirements.txt  static.py
app/: hello.py  main.py
data/: db.sqlite3
database/: models.py  requests.py
handlers/: admin.py  creator.py  user.py  user_states_middleeware.py  user_test_first.py
keyboards/: userkb.py
