[project]
name = "cwadventures-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiosqlite>=0.21.0",
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "logging>=0.4.9.6",
    "sqlalchemy>=2.0.40",
    "typing>=3.10.0.0",
]
